# ft_ls

./: .gitignore  CMakeLists.txt  Makefile  README.md  dirs_from_arguments.c  ft_ascii_sort.c  ft_files_second.c  ft_get_arg_files.c  ft_get_flags.c  ft_is_dir.c  ft_ls  ft_ls.c  ft_ls.h  ft_ls_recursion.c  ft_print_file_mode.c  ft_write_to_arr.c  get_identation.c  helpers.c  long_print.c  main.c  no_perm.c  one_more_link  one_print.c  perm_and_ext_attr.c  print_functions.c  recursion.c  soft_link  text.txt  time_sort.c  write_to_array_and_sort.c
Libft/: Makefile
Libft/includes/: ft_printf.h  get_next_line.h  libft.h
Libft/srcs/: ft_free_tab.c  ft_itoa_base.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_strlen.c  ft_strncmp.c  get_next_line.c  libft.h
Libft/srcs/ft_printf/: ft_printf.h  ft_putstr.c  ft_snumbers.c  ft_unumbers.c
includes/: ft_ls.h
