cmake_minimum_required(VERSION 3.9)
project(ft_ls)

set(CMAKE_CXX_STANDARD 11)

add_executable(ft_ls
        Libft/includes/ft_printf.h
        Libft/includes/get_next_line.h
        Libft/includes/libft.h
        Libft/srcs/ft_printf/check_for_additional_arg.c
        Libft/srcs/ft_printf/check_for_specifiers.c
        Libft/srcs/ft_printf/colors.c
        Libft/srcs/ft_printf/format_and_print.c
        Libft/srcs/ft_printf/ft_binary.c
        Libft/srcs/ft_printf/ft_check_prefix.c
        Libft/srcs/ft_printf/ft_end_printf.c
        Libft/srcs/ft_printf/ft_float.c
        Libft/srcs/ft_printf/ft_get_act_bits.c
        Libft/srcs/ft_printf/ft_pointer.c
        Libft/srcs/ft_printf/ft_printf.c
        Libft/srcs/ft_printf/ft_putchar.c
        Libft/srcs/ft_printf/ft_snumbers.c
        Libft/srcs/ft_printf/ft_unumbers.c
        Libft/srcs/ft_printf/ft_uputstr.c
        Libft/srcs/ft_printf/ft_ustrlen.c
        Libft/srcs/ft_printf/ft_ustrsub.c
        Libft/srcs/ft_printf/handling_strings.c
        Libft/srcs/ft_printf/helpers.c
        Libft/srcs/ft_printf/if_functions.c
        Libft/srcs/ft_printf/initialization.c
        Libft/srcs/ft_atoi.c
        Libft/srcs/ft_bzero.c
        Libft/srcs/ft_free_tab.c
        Libft/srcs/ft_get_bytes.c
        Libft/srcs/ft_get_items.c
        Libft/srcs/ft_isalnum.c
        Libft/srcs/ft_isalpha.c
        Libft/srcs/ft_isascii.c
        Libft/srcs/ft_isdigit.c
        Libft/srcs/ft_isprint.c
        Libft/srcs/ft_itoa.c
        Libft/srcs/ft_itoa_base.c
        Libft/srcs/ft_memalloc.c
        Libft/srcs/ft_memccpy.c
        Libft/srcs/ft_memchr.c
        Libft/srcs/ft_memcmp.c
        Libft/srcs/ft_memcpy.c
        Libft/srcs/ft_memdel.c
        Libft/srcs/ft_memmove.c
        Libft/srcs/ft_memset.c
        Libft/srcs/ft_power.c
        Libft/srcs/ft_strcat.c
        Libft/srcs/ft_strchr.c
        Libft/srcs/ft_strclr.c
        Libft/srcs/ft_strcmp.c
        Libft/srcs/ft_strcpy.c
        Libft/srcs/ft_strdel.c
        Libft/srcs/ft_strdup.c
        Libft/srcs/ft_strequ.c
        Libft/srcs/ft_striter.c
        Libft/srcs/ft_striteri.c
        Libft/srcs/ft_strjoin.c
        Libft/srcs/ft_strlen.c
        Libft/srcs/ft_strmap.c
        Libft/srcs/ft_strmapi.c
        Libft/srcs/ft_strncat.c
        Libft/srcs/ft_strncmp.c
        Libft/srcs/ft_strncpy.c
        Libft/srcs/ft_strndup.c
        Libft/srcs/ft_strnequ.c
        Libft/srcs/ft_strnew.c
        Libft/srcs/ft_strnstr.c
        Libft/srcs/ft_strrchr.c
        Libft/srcs/ft_strsplit.c
        Libft/srcs/ft_strstr.c
        Libft/srcs/ft_strsub.c
        Libft/srcs/ft_strtolower.c
        Libft/srcs/ft_strtrim.c
        Libft/srcs/ft_tolower.c
        Libft/srcs/ft_toupper.c
        Libft/srcs/get_next_line.c
        ft_ls.c ft_ls.h ft_get_flags.c)
